--- a/pom.xml
+++ b/pom.xml
@@ -74,5 +74,10 @@
 		<artifactId>spring-beans</artifactId>
 		<version>${org.springframework.version}</version>
 	</dependency>
+	<dependency>
+		<groupId>com.alibaba</groupId>
+		<artifactId>fastjson</artifactId>
+		<version>1.2.7</version>
+	</dependency>
   </dependencies>
 </project>
